--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>About me</title>
-  <a href="About me.html">About me</a>
+  <a href="index.html">About me</a>
 <!-- Backround -->
 <style>
 body{
