--- a/hacking.html
+++ b/hacking.html
@@ -6,11 +6,8 @@
   <a href="hacking.html">Hacking</a>
   <a href="coding.html">Coding</a>
   <!-- Backround -->
-<style>
-body{
-background-image: url("https://i.ytimg.com/vi/4l6J5jhRgos/maxresdefault.jpg");
-}
-</style>
+<div style="background:white url(//www.html.am/images/backgrounds/background-image-2.gif) repeat fixed;width:300px;height:200px;">HTML background code example</div>
+
 <!-- End of Backround -->
 
 </head>
