--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href="coding.html">Coding</a>
   </div>
   <h1>About Me</h1>
-  <p>My name is Landon ever since I was a kid my passion has been about computers and now its morphed into computer science</p>
+  <p>My name is Landon ever since I was a kid my passion has been about computers and has now been morphed into computer science</p>
   <p> When I grow up I want to be a penintration tester and your probley things "What is that?" its where companys hire you to try to exploit/hack there systems and to tell them there vulnerabilitie, and you get cash, lots of cash</p>
   <p>When I was 3 I got my own xbox 360 and I loved it so much</p>
   
