--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>About me</title>
-  <div style="text-align:center">
   <div style="text-align:left">
   <a href="index.html">About me</a>
   </div>
@@ -12,11 +11,12 @@
  <div style="text-align:right">
   <a href="coding.html">Coding</a>
   </div>
+  <div style="text-align:center">
   <h1>About Me</h1>
   <p>My name is Landon ever since I was a kid my passion has been about computers and has now been morphed into computer science</p>
   <p> When I grow up I want to be a penintration tester and your probley things "What is that?" its where companys hire you to try to exploit/hack there systems and to tell them there vulnerabilitie, and you get cash, lots of cash</p>
   <p>When I was 3 I got my own xbox 360 and I loved it so much</p>
-  
+  </div>
   <!-- Backround -->
 <style>
 body{
