Update Landingf page hyperlink alignment testing.html

--- a/Landingf page hyperlink alignment testing.html
+++ b/Landingf page hyperlink alignment testing.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>About me</title>
- <a href="index.html" style="float:left;">About me</a>
- <a href="hacking.html" style="float:middle;">Hacking</a>
- <a href="coding.html" style="float:right;">Coding</a>
+  <a href="hacking.html" style="position:absolute;left:47%;">Hacking</a>
+  <a href="index.html" style="float:left;">About me</a>
+ <a href="coding.html" style="float:right;" >Coding</a>
+ <br>
   <div style="text-align:center">
   <h1>About Me</h1>
   <p>My name is Landon ever since I was a kid my passion has been about computers and has now been morphed into computer science</p>
