--- a/hacking.html
+++ b/hacking.html
@@ -35,9 +35,12 @@ a:active {
  <br>
   <div style="text-align:center">
   <!-- Text and Heading -->
-    <h1>Heading</h1>
-  <p>text<p>
-   <img src="img" height="" width="" alt"">
+    <h1>Hacking</h1>
+  <p>People use the word hacking to much as if its a simple task or as something advanced.<p>
+  <p>Hacking is not just typing on a keyboard fast, or changing a setting, etc. The real definition is "the gaining of unauthorized access to data in a system or computer.".</p>
+  <p>Now lets say your asking "Well Landon what would be a situation that would be classified as hacking?" 
+  <!-- Put isint hacking iliggl -->
+   <img src="img" height="100" width="200" alt="A Decription">
   <!-- End of Text and Heading -->
   </div>
     <!-- Backround -->
