--- a/hacking.html
+++ b/hacking.html
@@ -27,7 +27,7 @@ a:active {
   text-decoration: underline;
 }
 </style>
-  <title>About me</title>
+  <title>Hacking</title>
   <a href="hacking.html" style="position:absolute;left:47%;">Hacking</a>
   <a href="index.html" style="float:left;">About me</a>
  <a href="coding.html" style="float:right;" >Coding</a>
@@ -38,8 +38,10 @@ a:active {
     <h1>Hacking</h1>
   <p>People use the word hacking to much as if its a simple task or as something advanced.<p>
   <p>Hacking is not just typing on a keyboard fast, or changing a setting, etc. The real definition is "the gaining of unauthorized access to data in a system or computer.".</p>
-  <p>Now lets say your asking "Well Landon what would be a situation that would be classified as hacking?" 
+  <h2>What would be hacking?</h2>
+  <p>Now lets say your asking "Well Landon what would be a situation that would be classified as hacking?". Well it can be alot of things but the most commom types of attacks are malware, social engineering which is using your voice/words to hack someones account, Credit Card, and Ddos attacks.</p>
   <!-- Put isint hacking iliggl -->
+  <h2>Is hacking illigal?<h2>
    <img src="img" height="100" width="200" alt="A Decription">
   <!-- End of Text and Heading -->
   </div>
