Update/Quick Save

--- a/hacking.html
+++ b/hacking.html
@@ -38,11 +38,11 @@ a:active {
     <h1>Hacking</h1>
   <p>People use the word hacking to much as if its a simple task or as something advanced.<p>
   <p>Hacking is not just typing on a keyboard fast, or changing a setting, etc. The real definition is "the gaining of unauthorized access to data in a system or computer.".</p>
-  <h2>What would be hacking?</h2>
+  <h2>What Would be Hacking?</h2>
   <p>Now lets say your asking "Well Landon what would be a situation that would be classified as hacking?". Well it can be alot of things but the most commom types of attacks are malware, social engineering which is using your voice/words to hack someones account, Credit Card, and Ddos attacks.</p>
-  <!-- Put isint hacking iliggl -->
-  <h2>Is hacking illigal?<h2>
-   <img src="img" height="100" width="200" alt="A Decription">
+  <h2>Is Hacking Illigal?</h2>
+  <p>The answer is yes and no, theres two types of hackers. A black hat hacker and a white hat hacker, both use the same techneics but white hat hackers hack with permission and tell who ever there hacking there vulnerabilities, but black hat hackers do the opposite which is illigal</p>
+   <img src="https://www.ecpi.edu/sites/default/files/whitehat.png" height="150" width="200" alt="White Hat Hacker">
   <!-- End of Text and Heading -->
   </div>
     <!-- Backround -->
