--- a/hacking.html
+++ b/hacking.html
@@ -41,7 +41,12 @@ a:active {
   <h2>What Would be Hacking?</h2>
   <p>Now lets say your asking "Well Landon what would be a situation that would be classified as hacking?". Well it can be alot of things but the most commom types of attacks are malware, social engineering which is using your voice/words to hack someones account, Credit Card, and Ddos attacks.</p>
   <h2>Is Hacking Illigal?</h2>
-  <p>The answer is yes and no, theres two types of hackers. A black hat hacker and a white hat hacker, both use the same techneics but white hat hackers hack with permission and tell who ever there hacking there vulnerabilities, but black hat hackers do the opposite which is illigal</p>
+  <p>The answer is yes and no, theres two types of hackers. A black hat hacker and a white hat hacker, both use the same technics but white hat hackers hack with permission and tell who ever there hacking there vulnerabilities which is legal, but black hat hackers do the opposite which is illigal.</p>
+  <h2>How can I protect myself?</h2>
+  <p>Theres lots of ways to keep yourself safe but the best things you can do is get the most security on your account or computer.</p>
+  <p>3 ways You would do that by enabling 2 step authentication, creating a strong password, and having a vpn on at all times.</p>
+  <p>Now you might be thinking "the chance of getting hacked is slim to none and how could someone just guess my password". This is where password hacking comes in, theres multiple methods of hacking someones password like trying from a list of leaked passwords, using bruteforce which is trying every combination of passwords, and etc. With a pretty powerful pc you can try billions of passwords a second and thats why having a strong password is helpful because hackers will go for easy to crack passwords because they can be cracked in seconds.</p>
+  <p>A vpn can protect you from ddos attacks, hackers stealing info, and seeing what your doing. 2 step authentication makes it so hackers cant just crack your password.</p>
    <img src="https://www.ecpi.edu/sites/default/files/whitehat.png" height="150" width="200" alt="White Hat Hacker">
   <!-- End of Text and Heading -->
   </div>
