--- a/coding.html
+++ b/coding.html
@@ -35,9 +35,11 @@ a:active {
  <br>
   <div style="text-align:center">
   <!-- Text and Heading -->
-    <h1>Heading</h1>
-  <p>text<p>
-   <img src="img" height="" width="" alt"">
+    <h1>Coding</h1>
+  <p>Coding is misunderstud my most people, its not just one thing its like learning a new language.</p>
+  <p>And theres lots of different "languages" the most common/popular are Html, Javascript, lua, css, etc. <a href="htmlcodepic.html" style="color:blue">Ex Html Code</a></p>
+  <p>If you want to make a website its 3 different coding languages, Html is the easiest and fast to learn and put down. The other 2 parts of making a website is Javascript, and Css. Javascript is a hard one to learn, its use for the way your website works and acts. Css is for the deceration of the website which is medium diffuculty to learn.</p>
+  
   <!-- End of Text and Heading -->
   </div>
     <!-- Backround -->
