--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ a:active {
  <a href="coding.html" style="float:right;" >Coding</a>
  <div id="blackbar"></div>
  <br>
-  <div style="text-align:center">grandmas house with
+  <div style="text-align:center">
   <h1>About Me</h1>
   <p>My name is Landon ever since I was a kid my passion has been about computers and has now been morphed into computer science. When I was young 0-3 my dad had a ps3 and thats what I started to play games on and then at 3 I got my own xbox 360. Lets just say I played minecraft alot and as I grew up at 4 my parents divorced, so I had to live at my grandmas house with my mom and then my dad got a new house so it was pretty hard switching houses and all that but I got used to it and continued on with my life.</p>
   <p> When I grow up I want to be a penintration tester and your probley things "What is that?" its where companys hire you to try to exploit/hack there systems and to tell them there vulnerabilities, and you get alot of money im talking $117,506 on average a year, now think of how much you get paid a job most likely $100-$1000.</p>
