--- a/htmlcodepic.html
+++ b/htmlcodepic.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<h1>Code Picture ex<h1>
+<div style="text-align:center">
+<h1>Code Picture ex</h1>
 </head>
 <body>
-<img src="https://miro.medium.com/max/2684/1*i-w3GRD_ddu-CeKfJgscDg.png" height="500" width="800" alt="Html Code Pic" style="float:center;">
+<img src="https://miro.medium.com/max/2684/1*i-w3GRD_ddu-CeKfJgscDg.png" height="500" width="750" alt="Html Code Pic" style="float:center;">
+</div>
 <br>
-  <a href="coding.html" style="float:center;">Go Back</a>
+  <a href="coding.html" style="position:absolute;left:47%;">Go Back</a>
 </body>
 </html>
