--- a/coding.html
+++ b/coding.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html>
 <head>
@@ -37,8 +38,9 @@ a:active {
   <!-- Text and Heading -->
     <h1>Coding</h1>
   <p>Coding is misunderstud my most people, its not just one thing its like learning a new language.</p>
-  <p>And theres lots of different "languages" the most common/popular are Html, Javascript, lua, css, etc. <a href="htmlcodepic.html" style="color:blue">Ex Html Code</a></p>
+  <p>And theres lots of different "languages" the most common/popular are Html, Javascript, lua, css, etc.</p>
   <p>If you want to make a website its 3 different coding languages, Html is the easiest and fast to learn and put down. The other 2 parts of making a website is Javascript, and Css. Javascript is a hard one to learn, its use for the way your website works and acts. Css is for the decoration of the website which is medium diffuculty to learn.</p>
+  <p>Lets talk about HTML, HTML is one of the easiest coding languages to learn and its a big part of making a website. You can start putting down code after youve practiced and learned for an hour, plus its really fun to code a full website like this. Heres what code looks like when your writing it down. <a href="htmlcodepic.html" style="color:blue">Ex Html Code</a></p>
   
   <!-- End of Text and Heading -->
   </div>
