--- a/coding.html
+++ b/coding.html
@@ -30,14 +30,13 @@ a:active {
   <title>About me</title>
   <a href="hacking.html" style="position:absolute;left:47%;">Hacking</a>
   <a href="index.html" style="float:left;">About me</a>
- <a href="coding.html" style="float:right;" >Coding</a>
+ <a href="coding.html" style="float:right;">Coding</a>
  <div id="blackbar"></div>
  <br>
   <div style="text-align:center">
   <!-- Text and Heading -->
     <h1>Coding</h1>
-  <p>Coding is misunderstud my most people, its not just one thing its like learning a new language.</p>
-  <p>And theres lots of different "languages" the most common/popular are Html, Javascript, lua, css, etc.</p>
+  <p>Coding is misunderstud my most people, its not just one thing its like learning a new language. And theres lots of different "languages" the most common/popular are Html, Javascript, lua, css, etc.</p>
   <p>If you want to make a website its 3 different coding languages, Html is the easiest and fast to learn and put down. The other 2 parts of making a website is Javascript, and Css. Javascript is a hard one to learn, its use for the way your website works and acts. Css is for the decoration of the website which is medium diffuculty to learn.</p>
   <p>Lets talk about HTML, HTML is one of the easiest coding languages to learn and its a big part of making a website. You can start putting down code after youve practiced and learned for an hour, plus its really fun to code a full website like this. Heres what code looks like when your writing it down. <a href="htmlcodepic.html" style="color:blue">Ex Html Code</a></p>
   <p>Now at medium difficulty youve got CSS, CSS is used for stuff like the backround of this page, or the NavBar at the top of this website, so its made for decorating the page/website. <a href="csscodepic.html" style="color:blue">Ex CSS Code</a></p>
