--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="shortcut icon" type="image/png" href="img/icon.png">
+  <link rel="shortcut icon" type="image/png" href="img/Icon.png">
 <!-- Nav Bar -->
 <style>
 #blackbar {
