Added grey hat hacker text

--- a/hacking.html
+++ b/hacking.html
@@ -41,7 +41,7 @@ a:active {
   <h2>What Would be Hacking?</h2>
   <p>Now lets say your asking "Well Landon what would be a situation that would be classified as hacking?". Well it can be alot of things but the most commom types of attacks are malware, social engineering which is using your voice/words to hack someones account, Credit Card, and Ddos attacks.</p>
   <h2>Is Hacking Illigal?</h2>
-  <p>The answer is yes and no, theres two types of hackers. A black hat hacker and a white hat hacker, both use the same technics but white hat hackers hack with permission and tell who ever there hacking there vulnerabilities which is legal, but black hat hackers do the opposite which is illigal.</p>
+  <p>The answer is yes and no, theres three types of hackers. A black hat hacker, a white hat hacker, and a grey hat hacker, all of them use the same technics but white hat hackers hack with permission and tell who ever there hacking there vulnerabilities which is legal, black hat hackers do the opposite which is illigal, and grey hat hackers are neutral, they do good things and bad things.</p>
   <h2>How can I protect myself?</h2>
   <p>Theres lots of ways to keep yourself safe but the best things you can do is get the most security on your account or computer.</p>
   <p>3 ways You would do that by enabling 2 step authentication, creating a strong password, and having a vpn on at all times.</p>
