--- a/csscodepic.html
+++ b/csscodepic.html
@@ -9,5 +9,7 @@
 </div>
 <br>
   <a href="coding.html" style="position:absolute;left:47%;">Go Back</a>
+  <p>&copy; Landon *****</p>
+  <p>CC-BY-NC-SA-ND</p>
 </body>
 </html>
