--- a/htmlcodepic.html
+++ b/htmlcodepic.html
@@ -9,7 +9,7 @@
 </div>
 <br>
   <a href="coding.html" style="position:absolute;left:47%;">Go Back</a>
-  <p>&copy; Landon *****</p>
+  <p>&copy; Landon ***** 2019</p>
   <p>CC-BY-NC-SA-ND</p>
 </body>
 </html>
