--- a/hacking.html
+++ b/hacking.html
@@ -48,7 +48,7 @@ a:active {
   <p>Now you might be thinking "the chance of getting hacked is slim to none and how could someone just guess my password". This is where password hacking comes in, theres multiple methods of hacking someones password like trying from a list of leaked passwords, using bruteforce which is trying every combination of passwords, and etc. With a pretty powerful pc you can try billions of passwords a second and thats why having a strong password is helpful because hackers will go for easy to crack passwords because they can be cracked in seconds.</p>
   <p>A vpn can protect you from ddos attacks, hackers stealing info, and seeing what your doing. 2 step authentication makes it so hackers cant just crack your password.</p>
    <img src="https://www.ecpi.edu/sites/default/files/whitehat.png" height="150" width="200" alt="White Hat Hacker">
-    <p>&copy; Landon *****</p>
+    <p>&copy; Landon ***** 2019</p>
   <p>CC-BY-NC-SA-ND</p>
   <!-- End of Text and Heading -->
   </div>
