--- a/javascriptcodepic.html
+++ b/javascriptcodepic.html
@@ -9,7 +9,10 @@
 </div>
 <br>
   <a href="coding.html" style="position:absolute;left:47%;">Go Back</a>
+  <br>
+  <div style="text-align:center;">
   <p>&copy; Landon ***** 2019</p>
   <p>CC-BY-NC-SA-ND</p>
+  </div>
 </body>
 </html>
