--- a/coding.html
+++ b/coding.html
@@ -42,7 +42,7 @@ a:active {
   <p>Now at medium difficulty youve got CSS, CSS is used for stuff like the backround of this page, or the NavBar at the top of this website, so its made for decorating the page/website. <a href="csscodepic.html" style="color:blue">Ex CSS Code</a></p>
   <p>Now JavaScript is at id say an expert level I mean just look at it <a href="javascriptcodepic.html" style="color:blue;">Ex JavaScript Code</a>. To learn the very basics of JavaScript it would take around a week but to get an intermediate level of JavaScript it would take around 9 full months</p>
   <p>Now theres oviously lots of other coding languages to learn like lua used in roblox, Java used in minecraft, Python and linux used in computer commands, etc</p>
-  <p>If you want to learn how to code here are some well known favorites to people and me <a href="bitdegree.org" style="text-decoration:none;">Bit dgree</a>
+  <p>If you want to learn how to code here are some well known favorites to people and me <a href="https://www.bitdegree.org" style="color:green;">Bitdegree</a>, <a href="https://www.w3schools.com" style="color:green;">W3Schools</a>, and lastly <a href="https://www.codecademy.com">Code Academy</a>.</p>
   <!-- finish this -->
     <p>&copy; Landon ***** 2019</p>
   <p>CC-BY-NC-SA-ND</p>
