--- a/codelists.html
+++ b/codelists.html
@@ -13,6 +13,9 @@
       <li><a href="https://www.codewars.com/" style="color:green; text-decoration:none;">Code Wars</a></li>
     </ol>
     <a href="coding.html" style="text-decoration:none; color:blue; position:absolute;left:8%;">Go Back</a>
+    <br>
+    <p>&copy; Landon ***** 2019</p>
+    <p>CC-BY-NC-SA-ND</p>
   </head>
 <body>
 
