--- a/codelist.html
+++ b/codelist.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,7 +13,7 @@
       <li><a href="https://www.udemy.com" style="color:green; text-decoration:none;">Udemy</a></li>
       <li><a href="https://www.codewars.com/" style="color:green; text-decoration:none;">Code Wars</a></li>
     </ol>
-    <a href="coding.html" style="text-decoration:none; color:blue; position:absolute;left:8%;">Go Back</a>
+    <a href="coding.html" style="text-decoration:none; color:blue; position:absolute;left:3%;">Go Back</a>
     <br>
     <p>&copy; Landon ***** 2019</p>
     <p>CC-BY-NC-SA-ND</p>
@@ -20,5 +21,6 @@
 <body>
 
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////landosmith.github.io/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
 </html>
