--- a/codelist.html
+++ b/codelist.html
@@ -5,13 +5,13 @@
 
     <p>The order will be from best to ok (in my opinion)</p>
     <ol>
-      <li><a href="https://www.bitdegree.org" style="color:green; text-decoration:none;">Bitdegree</a></li> 
-      <li><a href="https://www.w3schools.com" style="color:green; text-decoration:none;">W3Schools</a></li> 
-      <li><a href="https://www.codecademy.com" style="color:green; text-decoration:none;">Code Academy</a></li>
-      <li><a href="https://teamtreehouse.com" style="color:green; text-decoration:none;">Tree House</a>
-      <li><a href="https://www.khanacademy.org/" style="color:green; text-decoration:none;">Khan Academy</a></li>
-      <li><a href="https://www.udemy.com" style="color:green; text-decoration:none;">Udemy</a></li>
-      <li><a href="https://www.codewars.com/" style="color:green; text-decoration:none;">Code Wars</a></li>
+      <li><a href="https://www.bitdegree.org" style="color:green; text-decoration:none;" target="_blank">Bitdegree</a></li> 
+      <li><a href="https://www.w3schools.com" style="color:green; text-decoration:none;" target="_blank">W3Schools</a></li> 
+      <li><a href="https://www.codecademy.com" style="color:green; text-decoration:none;" target="_blank">Code Academy</a></li>
+      <li><a href="https://teamtreehouse.com" style="color:green; text-decoration:none;" target="_blank">Tree House</a>
+      <li><a href="https://www.khanacademy.org/" style="color:green; text-decoration:none;" target="_blank">Khan Academy</a></li>
+      <li><a href="https://www.udemy.com" style="color:green; text-decoration:none;" target="_blank">Udemy</a></li>
+      <li><a href="https://www.codewars.com/" style="color:green; text-decoration:none;" target="_blank">Code Wars</a></li>
     </ol>
     <a href="coding.html" style="text-decoration:none; color:blue; position:absolute;left:3%;">Go Back</a>
     <br>
