--- a/coding.html
+++ b/coding.html
@@ -43,9 +43,10 @@
       <p>Now JavaScript is at id say an expert level I mean just look at it <a href="javascriptcodepic.html" style="color:blue;">Ex JavaScript Code</a>. To learn the very basics of JavaScript it would take around a week but to get an intermediate level of JavaScript it would take around 9 full months</p>
       <p>Now theres oviously lots of other coding languages to learn like lua used in roblox, Java used in minecraft, Python and linux used in computer commands, etc</p>
       <p>If you want to learn how to code here are some well known favorites to people and me <a href="codelist.html">Here</a></p>
-      <!-- finish this -->
+      <footer>
       <p>&copy; Landon ***** 2019</p>
       <p>CC-BY-NC-SA-ND</p>
+      </footer>
       <!-- End of Text and Headings -->
     </div>
     <!-- Backround -->
@@ -58,6 +59,7 @@
     </div>
   </head>
 <body>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
 </html>
