--- a/codelist.html
+++ b/codelist.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -13,14 +12,14 @@
       <li><a href="https://www.udemy.com" style="color:green; text-decoration:none;" target="_blank">Udemy</a></li>
       <li><a href="https://www.codewars.com/" style="color:green; text-decoration:none;" target="_blank">Code Wars</a></li>
     </ol>
-    <a href="coding.html" style="text-decoration:none; color:blue; position:absolute;left:3%;">Go Back</a>
+    <a href="coding.html" style="text-decoration:none; color:blue; position:absolute;left:8%;">Go Back</a>
     <br>
     <p>&copy; Landon ***** 2019</p>
-    <p>CC-BY-NC-SA-ND</p>
+    <p><a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" style="text-decoration:none; color:black;">C</a>C-BY-NC-SA-ND</p>
   </head>
 <body>
 
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
-<script type='text/javascript'  src="https:////landosmith.github.io/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
 </html>
