--- a/javascriptcodepic.html
+++ b/javascriptcodepic.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-<div style="text-align:center">
-<h1>Code Picture ex</h1>
-</head>
-<body>
-<img src="https://www.codereadability.com/content/images/2016/09/Screen-Shot-2016-09-27-at-17.52.03.png" height="500" width="750" style="float:center;">
-</div>
-<br>
-  <a href="coding.html" style="position:absolute;left:47%;">Go Back</a>
-  <br>
-  <div style="text-align:center;">
-  <p>&copy; Landon ***** 2019</p>
-  <p>CC-BY-NC-SA-ND</p>
-  </div>
+  <head>
+    <h1>Code <a href="https://d1doqjmisr497k.cloudfront.net/-/media/mccormick-us/recipes/mccormick/p/800/polka-dot-easter-eggs.jpg" style="text-decoration:none; color:black;" target="_blank">P</a>icture ex</h1>
+      </head>
+    <body>
+      <img src="https://www.codereadability.com/content/images/2016/09/Screen-Shot-2016-09-27-at-17.52.03.png" height="500" width="750" style="float:center;">
+      </div>
+    <br>
+    <a href="coding.html" style="position:absolute;left:47%;">Go Back</a>
+    <br>
+    <div style="text-align:center;">
+      <p>codereadability.com</p>
+      <p>&copy; Landon ***** 2019</p>
+      <p>CC-BY-NC-SA-ND</p>
+    </div>
+    <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
 </html>
