--- a/htmlcodepic.html
+++ b/htmlcodepic.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-<div style="text-align:center">
-<h1>Code Picture ex</h1>
-</head>
-<body>
-<img src="https://miro.medium.com/max/2684/1*i-w3GRD_ddu-CeKfJgscDg.png" height="500" width="750" alt="Html Code Pic" style="float:center;">
-</div>
-<br>
-  <a href="coding.html" style="position:absolute;left:47%;">Go Back</a>
-  <br>
-  <div style="text-align:center;">
-  <p>&copy; Landon ***** 2019</p>
-  <p>CC-BY-NC-SA-ND</p>
-  </div>
+  <head>
+    <div style="text-align:center">
+      <h1>Code Picture ex</h1>
+      </head>
+    <body>
+      <img src="https://miro.medium.com/max/2684/1*i-w3GRD_ddu-CeKfJgscDg.png" height="500" width="750" alt="Html Code Pic" style="float:center;">
+      </div>
+    <br>
+    <a href="coding.html" style="position:absolute;left:47%;">Go Back</a>
+    <br>
+    <div style="text-align:center;">
+      <p>miro.medium.co<a href="https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2019%2F07%2FUntitled-design.png&signature=3eb451a46f0dc8aab8a65144e88af73f" style="text-decoration:none; color:black;" target="_blank">m</a></p>
+      <p>&copy; Landon ***** 2019</p>
+      <p>CC-BY-NC-SA-ND</p>
+    </div>
+    <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
 </html>
