--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
   </head>
 <body>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
 </html>
