--- a/2nd_Easter_Egg.html
+++ b/2nd_Easter_Egg.html
@@ -11,5 +11,6 @@
     <p>Ps: There no more on this page</p>
     <p>So try to <a href="coding.html" style="text-decoration:none; color:black;">GET OUT</a></p>
   <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
 </html>
