--- a/codelist.html
+++ b/codelist.html
@@ -15,10 +15,12 @@
     <a href="coding.html" style="text-decoration:none; color:blue; position:absolute;left:8%;">Go Back</a>
     <br>
     <p>&copy; Landon ***** 2019</p>
-    <p><a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" style="text-decoration:none; color:black;">C</a>C-BY-NC-SA-ND</p>
+    <p><a href="https://canalwalk.co.za/storage/app/uploads/public/5b0/d57/983/thumb_1218_0_0_0_0_auto.png" style="text-decoration:none; color:black;">C</a>C-BY-NC-SA-ND</p>
   </head>
 <body>
 
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
