--- a/csscodepic.html
+++ b/csscodepic.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-<div style="text-align:center">
-<h1>Code Picture ex</h1>
-</head>
-<body>
-<img src="https://hackernoon.com/hn-images/1*hpfJEIBXqSnQFwFgH9rrNg.png" height="500" width="750" style="float:center;">
-</div>
-<br>
-  <a href="coding.html" style="position:absolute;left:47%;">Go Back</a>
-  <br>
-  <div style="text-align:center;">
-  <p>&copy; Landon ***** 2019</p>
-  <p>CC-BY-NC-SA-ND</p>
-  </div>
+  <head>
+    <div style="text-align:center">
+      <h1>Code Picture ex</h1>
+      </head>
+    <body>
+      <img src="https://hackernoon.com/hn-images/1*hpfJEIBXqSnQFwFgH9rrNg.png" height="500" width="750" style="float:center;">
+      </div>
+    <br>
+    <a href="coding.html" style="position:absolute;left:47%;">Go Back</a>
+    <br>
+    <div style="text-align:center;">
+      <p>hackernoon.com</p>
+      <p>&copy; Landon **<a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROArBxDAgwR1T9uFQWWkmbEKtrL7rOZ_Xb2GhWjfoPoSlYUaHn&s" style="text-decoration:none; color:black;" target="_blan">*</a>** 2019</p>
+      <p>CC-BY-NC-SA-ND</p>
+    </div>
+    <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
 </html>
