--- a/Easter_egg.html
+++ b/Easter_egg.html
@@ -17,9 +17,10 @@
     <br>
     <br>
     <br>
-    <a href="2nd_Easter_Egg.html" style="text-decoration:none; color:black; position:absolute;right:0%;">ddddddd</a>
+    <a href="2nd_Easter_Egg.html" style="text-decoration:none; color:white; position:absolute;bottom:0%; position:absolute;right:0%;">ddddddd</a>
     
   <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////landosmith.github.io/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
 </html>
