Added some heading

--- a/coding.html
+++ b/coding.html
@@ -43,7 +43,8 @@
       <p>Lets talk about HTML, HTML is one of the easiest coding languages to learn and its a big part of making a website. You can start putting down code after youve practiced and learned for an hour, plus its really fun to code a full website like this. Heres what code looks like when your writing it down. <a href="htmlcodepic.html" style="color:blue">Ex Html Code</a></p>
       <p>Now at medium difficulty youve got CSS, CSS is used for stuff like the backround of this page, or the NavBar at the top of this website, so its made for decorating the page/website. <a href="csscodepic.html" style="color:blue">Ex CSS Code</a></p>
       <p>Now JavaScript is at id say an expert level I mean just look at it <a href="javascriptcodepic.html" style="color:blue;">Ex JavaScript Code</a>. To learn the very basics of JavaScript it would take around a week but to get an intermediate level of JavaScript it would take around 9 full months</p>
-      <p>Now theres oviously lots of other coding languages to learn like lua used in roblox, Java used in minecraft, Python and linux used in computer commands, etc</p>
+      <h2>What else is there and where can I learn?</h2>
+      <p>Now theres lots of other coding languages to learn like lua used in roblox, Java used in minecraft, Python and linux used in computer commands, etc</p>
       <p>If you want to learn how to code here are some well known favorites to people and me <a href="codelist.html">Here</a></p>
       <footer>
       <p>&copy; Landon ***** 2019</p>
