--- a/codelist.html
+++ b/codelist.html
@@ -14,11 +14,14 @@
     </ol>
     <a href="coding.html" style="text-decoration:none; color:blue; position:absolute;left:8%;">Go Back</a>
     <br>
-    <p>&copy; Landon ***** 2019</p>
-    <p><a href="https://canalwalk.co.za/storage/app/uploads/public/5b0/d57/983/thumb_1218_0_0_0_0_auto.png" style="text-decoration:none; color:black;">C</a>C-BY-NC-SA-ND</p>
+    <div style="text-align:center;">
+    <p>&copy; Landon ***** 2019</p><footer>
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+    </footer>
   </head>
 <body>
 
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
