--- a/Easter_egg.html
+++ b/Easter_egg.html
@@ -17,10 +17,16 @@
     <br>
     <br>
     <br>
-    <a href="2nd_Easter_Egg.html" style="text-decoration:none; color:white; position:absolute;bottom:0%; position:absolute;right:0%;">ddddddd</a>
+    <a href="2nd_Easter_Egg.html" style="text-decoration:none; color:white; position:absolute;right:0%; ">d</a>
     
   <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
-<script type='text/javascript'  src="https:////landosmith.github.io/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+    <br>
+    <div style="text-align:center;">
+      <p>&copy; Landon ***** 2019</p><footer>
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+      </footer>
+    </div> 
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
 </html>
