--- a/csscodepic.html
+++ b/csscodepic.html
@@ -13,9 +13,15 @@
     <div style="text-align:center;">
       <p>hackernoon.com</p>
       <p>&copy; Landon **<a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROArBxDAgwR1T9uFQWWkmbEKtrL7rOZ_Xb2GhWjfoPoSlYUaHn&s" style="text-decoration:none; color:black;" target="_blan">*</a>** 2019</p>
-      <p>CC-BY-NC-SA-ND</p>
+      
+      <div style="text-align:center;">
+        <footer>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+        </footer>
+      </div>
     </div>
     <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
