--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
       <p>My name is Landon ***** ever since I was a kid my passion has been about computers and has now been morphed into computer science. When I was young 2-3 my dad had a ps3 and thats what I started to play games on and then at 3 I got my own xbox 36<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" style="text-decoration:none; color:black;">0</a>. Lets just say I played minecraft alot and as I grew up at 4 my parents divorced, so I had to live at my grandmas house with my mom and then my dad got a new house so it was pretty hard switching houses and all that but I got used to it and continued on with my life.</p>
       <p> When I grow up I want to be a penintration tester and your probley things "What is that?" its where companys hire you to try to exploit/hack there systems and to tell them there vulnerabilities, and you get alot of money im talking $117,506 on average a year, now think of how much you get paid a job most likely $100-$1000.</p>
       <p>So im getting some gadgets that will be super cool like the wifi pineapple, the rasberry pie, Ducky, Etc. I dont know who came up with these names but they are hacking gadgets. My favorite one called the wifi pineapple it demonstrates why to be safe on connecting to free wifi networks and why to use a vpn. I<a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" style="text-decoration:none; color:black;">f</a> you want to get more in depth with it go to this link where they demonstrate how its used and what it can do <a href="https://www.youtube.com/watch?v=NkNgW3TwMy8" style="color:blue;" >Wifi Pineapple Video</a>.</p>
-      <footer>
-      <p>&copy; Landon ***** 2019</p>
-      <p>CC-BY-NC-SA-ND</p>
-      </footer>
+      <div style="text-align:center;">
+        <p>&copy; Landon ***** 2019</p><footer>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+        </footer>
+      </div> 
     </div>
     <!-- End of text -->
     <!-- Backround -->
@@ -58,6 +59,8 @@
     </div>
   </head>
 <body>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
+<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
 </body>
