--- a/htmlcodepic.html
+++ b/htmlcodepic.html
@@ -12,13 +12,11 @@
     <br>
     <div style="text-align:center;">
       <p>miro.medium.co<a href="https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2019%2F07%2FUntitled-design.png&signature=3eb451a46f0dc8aab8a65144e88af73f" style="text-decoration:none; color:black;" target="_blank">m</a></p>
-      <p>&copy; Landon ***** 2019</p>
-      <p>CC-BY-NC-SA-ND</p>
+      <div style="text-align:center;">
+        <p>&copy; Landon ***** 2019</p><footer>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+        </footer>
+      </div>
     </div>
-    <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
-<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
-<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
-<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
-<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
-</body>
+    </body>
 </html>
