--- a/javascriptcodepic.html
+++ b/javascriptcodepic.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <h1>Code <a href="https://d1doqjmisr497k.cloudfront.net/-/media/mccormick-us/recipes/mccormick/p/800/polka-dot-easter-eggs.jpg" style="text-decoration:none; color:black;" target="_blank">P</a>icture ex</h1>
+    <div style="text-align:center">
+      <h1>Code Picture ex</h1>
       </head>
     <body>
-      <img src="https://www.codereadability.com/content/images/2016/09/Screen-Shot-2016-09-27-at-17.52.03.png" height="500" width="750" style="float:center;">
+      <img src="https://miro.medium.com/max/2684/1*i-w3GRD_ddu-CeKfJgscDg.png" height="500" width="750" alt="Html Code Pic" style="float:center;">
       </div>
     <br>
     <a href="coding.html" style="position:absolute;left:47%;">Go Back</a>
     <br>
     <div style="text-align:center;">
-      <p>codereadability.com</p>
-      <p>&copy; Landon ***** 2019</p>
-      <p>CC-BY-NC-SA-ND</p>
+      <p>miro.medium.co<a href="https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2019%2F07%2FUntitled-design.png&signature=3eb451a46f0dc8aab8a65144e88af73f" style="text-decoration:none; color:black;" target="_blank">m</a></p>
+      <div style="text-align:center;">
+        <p>&copy; Landon ***** 2019</p><footer>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+        </footer>
+      </div>
     </div>
-    <script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
-<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
-<script type='text/javascript'  src="https:////studio.code.org/19650f0a71794964caeb05cba04dd83b31b5542cedfae8b204147982d3c9a0c6/inject.js"></script>
-</body>
+    </body>
 </html>
